[gd_scene load_steps=3 format=3 uid="uid://n5usmog7onlc"]

[ext_resource type="Texture2D" uid="uid://dl65f8htexxk5" path="res://Assests/menus/MenuPrincipal/Imagenes/image0.png" id="1_21nk2"]
[ext_resource type="Script" path="res://Assests/menus/MenuLVL1-2/scripts.gd" id="1_eeg2b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eeg2b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_21nk2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -83.5
offset_right = 131.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2

[node name="Nivel1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "NIVEL 1"

[node name="Nivel2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "NIVEL 2"

[node name="Nivel3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "NIVEL 3"
